--- a/angular.json
+++ b/angular.json
@@ -68,12 +68,18 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "liveReload": false,
+            "hmr": false
+          },
           "configurations": {
             "production": {
               "buildTarget": "frontend:build:production"
             },
             "development": {
-              "buildTarget": "frontend:build:development"
+              "buildTarget": "frontend:build:development",
+              "liveReload": false,
+              "hmr": false
             }
           },
           "defaultConfiguration": "development"
